# gm-assistant

./: .gitignore  CLAUDE.md  README.md  canonical-resync-backlog.md
.claude/: bootstrap-container.sh  settings.json
.claude/agents/: backstory-review.md  building-review.md  frontend-review.md  size-audit.md
.claude/memory/: MEMORY.md  feedback_commit_authorization.md  project_memory_budget.md  reference_git_author_identity.md  reference_memory_persistence_setup.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
campaigns/: CLAUDE.md  damasu-domain.md  damasu-relic-seekers.md  damasu-temples.md  dark-moto.md  first-toshi-ranbo.md  hidden-way.md  kaiu-wall.md  karmic-inquisitors-temple.md  karmic-inquisitors-timeline.md  karmic-inquisitors.md  peasant-campaign.md  takaba.md  temple-relics.md  wasp-bounty-hunters.md
cosmology/: CLAUDE.md  between-places.md  burning-sands.md  fortunes.md  maho.md  moon-court.md  moon-stories.md
hooks/: CLAUDE.md  caravan.md  city.md  countryside.md  grifts.md  prison.md  town.md
scripts/: clone-sync-hooks.sh  launch-container.sh  ritual.sh  sync-with-main.sh  temperature-check.sh  test-clone-sync-hooks.sh
scripts/temperature-widget/: CLAUDE.md  README.md  extension.js  history.js  install.sh  metadata.json  test-history.js
setting/: CLAUDE.md  castes.md  clans-and-imperials.md  demographics.md  economics.md  government.md  hierarchies.md  large-cities.md  lineages.md  median-domain.md  ogres.md  overview.md  place-names.md  professions.md  rank-accordances.md  village-headsmen.md
weather/: README.md  build_weather_csv.py  rokugani_weather.py  weather-2015.csv
webapp/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  authorize_op.py  conftest.py  development-defaults.ini  development-secrets.ini.example  fly.toml  mainguard.py  orgchart.py  probe_op_oauth.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
webapp/bakeoff/: CLAUDE.md  README.md  __init__.py  analyze.py  app.py  briefs.py  build_tasks.py  characters.json  config.py  flavor_clans.md  generate.py
webapp/bakeoff/templates/: done.html  vote.html
webapp/chargen/: __init__.py  art.py  brief.py  character.py  configspec.ini  constants.py  female_names.txt  male_names.txt  ministry.py  op.py  opcache.py  opsynth.py  synthesis.py  synthesis_brief.md  synthesis_costs.md  test_brief.py  test_op.py  test_opcache.py  test_opsynth.py  test_synthesis.py  test_website_synthesize.py  website.py
webapp/chargen/fixtures/: op_bodies.json  op_character.json  op_character_page.html  op_list.json  synthesis_response.txt
webapp/chargen/templates/: cleanup.html  index.html  ministry.html  private_info.txt  public_info.txt
webapp/l7r/: __init__.py  app.py  auth.py  auth_routes.py  dreams.py  fortunes.py  jinja_env.py  names.py  places.py  pool.py  sections.py  slugs.py
webapp/l7r/content/: dreams_framework.md
webapp/l7r/static/: viewer.html
webapp/l7r/static/css/: l7r.css
webapp/l7r/static/js/: l7r.js
webapp/l7r/templates/: _404.html  _layout.html  access_denied.html  auth_error.html  auth_misconfigured.html  dream_detail.html  dreams_index.html  forbidden.html  landing.html  login.html  names_index.html  names_placeholder.html  places_detail.html  places_index.html  privacy.html  relic_detail.html  relics_index.html  terms.html
webapp/tests/: conftest.py  dom_audit.py  screenshot.py  test_app.py  test_art.py  test_auth.py  test_auth_routes.py  test_character_location.py  test_character_monk.py  test_character_posts.py  test_character_rank_bonus.py  test_character_rank_jitter.py  test_chargen_security.py  test_dreams.py  test_dreams_routes.py  test_fortunes.py  test_jinja_env.py  test_names.py  test_no_typographic_dashes.py  test_places.py  test_places_routes.py  test_pool.py  test_sections.py  test_slugs.py
webapp/tests/fixtures/dream_pool/pool/: malformed-missing-sender.md  sample-daikoku-scene.md  sample-ebisu-scene.md
webapp/tests/fixtures/dream_pool/pool-local/: decoy-spoiler-scene.md
webapp/tests/fixtures/names_sample/: pool-female.jsonl  pool-male.jsonl
webapp/tests/fixtures/places_sample/: pool.jsonl
webapp/tests/fixtures/pool_sample/benten/: sample-benten-cup.md  sample-benten-stone.md
webapp/tests/fixtures/pool_sample/bishamon/: sample-bishamon-sword.md
webapp/tests/fixtures/pool_sample/ebisu/: malformed.md  sample-ebisu-hammer.md
(+1013 files in other folders)
